syntax = "proto3";
package user_management;

service UserManager{
	rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse);
	rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
	rpc AddUser (AddUserRequest) returns (AddUserResponse);
    rpc VerifyAccount(VerifyAccountRequest) returns (VerifyAccountResponse);
    rpc GetTotalComments (GetTotalCommentsRequest) returns (GetTotalCommentsResponse);
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);

}
message ExerciseModelGrpc
{
	 string exercise_id = 1;
     string category_detail_id = 2;
     string title_of_exercise = 3;
     string exercise_description = 4;
     string create_at = 5;      
}

message UserIds
{
    string Uid = 1;    
}

message GetUserByEmailRequest{
	string account = 1; 
}
message GetUserByEmailResponse{
	string Uid = 1; 
    string UserName = 2;
    string Password = 3;
    string Account = 4;
    string Avatar = 5;
    bool IsVerified = 6;
    int32 Role = 7;
}

message GetUsersByIdsRequest{
	repeated UserIds uids = 1 ;
}
message GetUsersByIdsResponse{
    repeated  GetUserByEmailResponse inforUsers =1 ;
	
}
message AddUserRequest{
 
    string UserName = 1;
    string Password = 2;
    string Account = 3;
    string Avatar = 4;
    bool IsVerified = 5;
}

message AddUserResponse{
    string StatusCode = 1;
    string StausDetail = 2;
}

message VerifyAccountRequest{
    string account = 1; 
}
message VerifyAccountResponse{
    string StatusCode = 1;
    string StausDetail = 2;
}


message TotalComment{
	string exercise_id = 1;
    string category_detail_id = 2;
    string title_of_exercise = 3;
    string exercise_description = 4;
    string create_at = 5;
	int32 total_replies = 6;
}


message GetTotalCommentsRequest{
	repeated ExerciseModelGrpc exercises = 1;
}

message GetTotalCommentsResponse{
	repeated TotalComment exercises = 1;
}

message UpdatePasswordRequest{
    string Account = 1; 
    string Password = 2;
}

message UpdatePasswordResponse{
    string StatusCode = 1;
    string StausDetail = 2;
}
